...
        app:titleTextColor="#FFFFFF" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="@dimen/connexion_largeur_plainText"
        android:layout_height="334dp"
        app:layout_constraintBottom_toTopOf="@+id/enregistrement_creer_un_compte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enregistrement_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
...
